# simba

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README  README.md  base.css  configure  index.html  simba.desktop  simba.pro  simba.qc
data/: data.qrc
man/: simba.1
src/: about.ui  const.h  credits.ui  database.cpp  database.h  iconloader.cpp  iconloader.h  license.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  src.pro
src/data/: data.qrc  noLeo.html
