CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(simba)
FIND_PACKAGE(Qt4 REQUIRED)
SET(QT_USE_QTWEBKIT TRUE)

INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

SET(simba_SOUCRES main.cpp mainwindow.cpp)
SET(simba_HEADERS mainwindow.h)
SET(simba_RESOURCES data/data.qrc)

QT4_WRAP_CPP(simba_HEADERS_MOC ${simba_HEADERS})
QT4_ADD_RESOURCES(simba_RESOURCES_RCC ${simba_RESOURCES})

ADD_EXECUTABLE(simba ${simba_SOUCRES}
    ${simba_HEADERS_MOC}
        ${SIMBA_RESOURCES_RCC})
	TARGET_LINK_LIBRARIES(simba ${QT_LIBRARIES})

	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
